@@ -3,6 +3,7 @@ use inc::Module::Install;
 name 'Osgood-Server';
 all_from 'lib/Osgood/Server.pm';
 
+requires 'DBIx::Class::TimeStamp';
 requires 'DateTime';
 requires 'DateTime::Format::MySQL';
 requires 'Osgood::Client' => '1.2.0';
@@ -13,8 +14,6 @@ requires 'Catalyst::Plugin::ConfigLoader';
 requires 'Catalyst::Plugin::Params::Nested';
 requires 'Catalyst::Plugin::Static::Simple';
 requires 'Catalyst::Action::REST';
-requires 'Catalyst::Action::RenderView';
-requires 'Catalyst::View::REST::XML' => 0;
 requires 'JSON::XS';
 requires 'YAML'; # This should reflect the config file format you've chosen
                  # See Catalyst::Plugin::ConfigLoader for supported formats
