@@ -1,5 +1,0 @@
-package Osgood::Server::View::REST;
-
-use base 'Catalyst::View::REST::XML';
-
-1;
