@@ -6,7 +6,7 @@ my $osurl = $ENV{'OSGOOD_SERVER_URL'};
 
 plan skip_all => 'Set $ENV{OSGOOD_SERVER_URL} to run this test.' unless $osurl;
 
-plan tests => 11;
+plan tests => 12;
 
 use DateTime;
 use Osgood::Client;
@@ -14,7 +14,7 @@ use Osgood::Event;
 use Osgood::EventList;
 use URI;
 
-my $uri = URI($ENV{'OSGOOD_SERVER_URL'})->new;
+my $uri = URI->new($ENV{'OSGOOD_SERVER_URL'});
 my $client = Osgood::Client->new({ url => $uri });
 
 my $event1 = Osgood::Event->new(
@@ -35,8 +35,8 @@ my $event3 = Osgood::Event->new(
 my $list = Osgood::EventList->new(events => [ $event1, $event2, $event3 ]);
 
 $client->list($list);
-my $retval = $client->send();
-cmp_ok($list->size(), 'eq', $retval, 'add correct number');
+my $retval = $client->send;
+cmp_ok($list->size, 'eq', $retval, 'add correct number');
 
 $retval = $client->query({
      object => 'Person',
@@ -44,18 +44,18 @@ $retval = $client->query({
 });
 
 ok($retval, 'query succeeded');
-isa_ok($client->list(), 'Osgood::EventList');
-ok($client->list->size(), 'got events');
-my $iterator = $client->list->iterator();
-my $nevent = $iterator->next();
+isa_ok($client->list, 'Osgood::EventList');
+ok($client->list->size, 'got events');
+my $iterator = $client->list->iterator;
+my $nevent = $iterator->next;
 isa_ok($nevent, 'Osgood::Event');
-cmp_ok($nevent->object(), 'eq', 'Person', 'Event object');
-cmp_ok($nevent->action(), 'eq', 'sneezed', 'Event action');
+cmp_ok($nevent->object, 'eq', 'Person', 'Event object');
+cmp_ok($nevent->action, 'eq', 'sneezed', 'Event action');
 
 # Since we inserted 3 events, we are guaranteed to have at least one event
 # between these two.
-my $lowid = $nevent->id();
-my $highid = $client->list->get_highest_id();
+my $lowid = $nevent->id;
+my $highid = $client->list->get_highest_id;
 
 # Test id_greater
 $retval = $client->query({
@@ -64,9 +64,9 @@ $retval = $client->query({
      id_greater => $lowid
 });
 ok($retval, 'query succeeded');
-$iterator = $client->list->iterator();
-$nevent = $iterator->next();
-cmp_ok($nevent->id(), '>', $lowid, 'id_greater');
+$iterator = $client->list->iterator;
+$nevent = $iterator->next;
+cmp_ok($nevent->id, '>', $lowid, 'id_greater');
 
 # Test id_less
 $retval = $client->query({
@@ -75,6 +75,11 @@ $retval = $client->query({
      id_less => $lowid
 });
 ok($retval, 'query succeeded');
-cmp_ok($client->list->get_highest_id(), '<', $highid, 'id_less');
 
-
+# Test id_less
+$retval = $client->query({
+     object => 'Person',
+     action => 'sneezed',
+});
+ok($retval, 'query succeeded');
+ok($client->list->size, 'people sneezed');
